# ros2-factory-patrol-amr

./: .clang-format  .gitattributes  .gitignore  README.md
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: amr_demo.launch.py  bringup.launch.py  display.launch.py  factory_patrol_demo.launch.py  tracking.launch.py
src/robot_bringup/test/: test_mock_bringup.launch.py
src/robot_experiments/: CMakeLists.txt  package.xml
src/robot_experiments/paths/: demo_path.txt  hospital_delivery.txt  office_patrol.txt  warehouse_pick_drop.txt
src/robot_experiments/results/: nav2_advanced_20260509_105605.csv  nav2_advanced_20260509_105605.json  scenario_workflow_warehouse_inbound_crossdock_20260510_121139.csv  scenario_workflow_warehouse_inbound_crossdock_20260510_121139.json
src/robot_experiments/src/: experiment_runner_node.cpp
src/robot_hardware/: CMakeLists.txt  package.xml  robot_hardware_plugins.xml
src/robot_hardware/config/: ekf.yaml  ros2_control_controllers.yaml
src/robot_hardware/launch/: chassis_simulator.launch.py  hardware.launch.py  hardware_ekf.launch.py  ros2_control_hardware.launch.py
src/robot_hardware/src/: chassis_backend_factory.cpp  chassis_driver_node.cpp  chassis_hardware_interface.cpp  chassis_kinematics.cpp  chassis_packet.cpp  chassis_simulator_node.cpp  chassis_system_adapter.cpp  mock_backend.cpp  odom_path_recorder_node.cpp  serial_backend.cpp  udp_backend.cpp
src/robot_hardware/test/: chassis_kinematics_test.cpp  chassis_packet_test.cpp  chassis_system_adapter_test.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: LocalizationHealth.msg  PayloadState.msg  RobotState.msg  SafetyState.msg
src/robot_interfaces_business/: CMakeLists.txt  package.xml
src/robot_interfaces_business/srv/: CancelWorkflow.srv  ConfirmDropoff.srv  ConfirmPick.srv  GetOperatorSnapshot.srv  GetOrderFulfillmentStatus.srv  GetWorkflowStatus.srv  ListBusinessOrderTypes.srv  ListScenarioTasks.srv  ListScenarioWorkflows.srv  PauseWorkflow.srv  ReportShortPick.srv  ResumeWorkflow.srv  SubmitBusinessOrder.srv  SubmitMilkRun.srv  SubmitOrder.srv  SubmitPickingWave.srv  SubmitReplenishmentOrder.srv  SubmitScenarioTask.srv  SubmitScenarioWorkflow.srv  SubmitTransportOrder.srv  SubmitVda5050Order.srv
src/robot_interfaces_core/: CMakeLists.txt  package.xml
src/robot_interfaces_core/msg/: ChassisState.msg  NavigationStatistics.msg  TaskStatus.msg  TrackingError.msg
src/robot_interfaces_core/srv/: GetStatistics.srv
src/robot_interfaces_facility/: CMakeLists.txt  package.xml
src/robot_interfaces_facility/srv/: ConfirmLoad.srv  ConfirmStationAction.srv  ConfirmUnload.srv  ExecuteFacilityAction.srv  ExecuteTopModuleAction.srv  GetDoorState.srv  GetLiftState.srv  GetPendingConfirmations.srv  ListFacilityResources.srv  RejectStationAction.srv  ReleaseFacilityResource.srv  ReleaseLiftSession.srv  RequestLiftSession.srv  RequestStationConfirmation.srv  ReserveFacilityResource.srv  SetPayloadLoaded.srv
src/robot_interfaces_fleet/: CMakeLists.txt  package.xml
src/robot_interfaces_fleet/srv/: ListFleetRobots.srv  PreviewFleetStationTask.srv  SubmitFleetStationTask.srv  UpdateFleetRobotState.srv  UpdateRemoteTaskState.srv
src/robot_interfaces_mission/: CMakeLists.txt  package.xml
src/robot_interfaces_mission/srv/: BlockStationRoute.srv  CancelQueuedMission.srv  CancelStationOrderBatch.srv  ClearTrafficReservation.srv  DetectTrafficDeadlock.srv  EnqueueMission.srv  EstimateMissionCost.srv  EstimateStationSequence.srv  EstimateStationTransport.srv  GetDockState.srv  GetMissionRecoveryState.srv  ListDocks.srv  ListMissionEvents.srv  ListStationRoutes.srv  ListStations.srv  ListTrafficReservations.srv  PreemptMission.srv  ReprioritizeBatch.srv  ReprioritizeQueuedMission.srv  RequestCharging.srv  RequestDocking.srv  RequestOpportunityCharging.srv  RequestUndocking.srv  SubmitStationOrderBatch.srv  SubmitStationSequenceTask.srv  SubmitStationTransportOrder.srv  UnblockStationRoute.srv
src/robot_interfaces_navigation/: CMakeLists.txt  package.xml
src/robot_interfaces_navigation/action/: NavigateSequence.action
src/robot_interfaces_navigation/msg/: MapZone.msg
src/robot_interfaces_navigation/srv/: ClearObstacleBlockage.srv  EvaluateMapPosition.srv  ListMapZones.srv  ListMaps.srv  ReportObstacleBlockage.srv  RequestRelocalization.srv  SetActiveMap.srv  SetDynamicSpeedLimit.srv  SetInitialPoseFromStation.srv
src/robot_interfaces_site/: CMakeLists.txt  package.xml
src/robot_interfaces_site/srv/: ActivateSiteConfig.srv  RollbackSiteConfig.srv  ValidateSiteConfig.srv
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: cartographer.lua  map_zones.yaml  nav2_advanced.yaml  nav2_basic.yaml  slam_toolbox.yaml
src/robot_navigation/launch/: localization_health.launch.py  map_manager.launch.py  nav.launch.py  navigation_no_docking.launch.py  slam.launch.py  zone_filters.launch.py
src/robot_navigation/maps/: factory_patrol_map_README.md  indoor_room.pgm  indoor_room.yaml
src/robot_navigation/src/: export_zone_filter_masks.cpp  localization_health.cpp  localization_health_monitor_node.cpp  map_catalog.cpp  map_manager_node.cpp  zone_catalog.cpp  zone_filter_masks.cpp
src/robot_navigation/test/: localization_health_test.cpp  map_catalog_test.cpp  test_nav2_mock_runtime.launch.py  test_slam_mock_runtime.launch.py  zone_catalog_test.cpp  zone_filter_masks_test.cpp
src/robot_path_tracking/: CMakeLists.txt  package.xml
src/robot_path_tracking/src/: path_publisher_node.cpp  pure_pursuit_controller_node.cpp  stanley_controller_node.cpp
src/robot_path_tracking/test/: tracking_math_test.cpp
src/robot_sensors/: CMakeLists.txt  package.xml
src/robot_sensors/config/: laser_filter_chain.yaml
src/robot_sensors/launch/: sensors.launch.py
src/robot_sensors/src/: fake_scan_node.cpp  (+3 more)
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_tasks/: CMakeLists.txt  package.xml
src/robot_teleop/: CMakeLists.txt  package.xml
src/robot_utils/: CMakeLists.txt  package.xml
(+367 files in other folders)
